ingress/ailyze_companion_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ailyze-companion-ingress
  namespace: uppy
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-companion
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-headers: "DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization,uppy-auth-token"
    nginx.ingress.kubernetes.io/cors-allow-origin: "https://ai.ailyze.com,https://ailyze.com"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - uppycompanion.ailyze.com
    secretName: ailyze-companion-ssl
  rules:
  - host: uppycompanion.ailyze.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ailyze-companion-service
            port:
              number: 80
