ingress/ailyze_django_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ailyze-django-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-body-size: "200M"
    nginx.ingress.kubernetes.io/server-snippet: |
      keepalive_timeout 300s;  
      client_max_body_size 200M;  
      client_body_buffer_size 128k;  
      client_header_buffer_size 1k; 
      ssl_buffer_size 4k; 
      proxy_set_header X-Real-IP $remote_addr; 
      proxy_set_header Host $host; 
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - ai.ailyze.com
    secretName: ailyze-django-ssl
  rules:
  - host: ai.ailyze.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ailyze-django-service
            port:
              number: 80
      - path: /bot
        pathType: Prefix
        backend:
          service:
            name: ailyze-django-bot-service
            port:
              number: 8001
