ingress/ailyze_react_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ailyze-react-ingress
  annotations:
    cert-manager.io/cluster-issuer: ailyze-react
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - ailyze.com
    - www.ailzye.com
    secretName: ailyze-newreact-ssl
  rules:
  - host: ailyze.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ailyze-react-service
            port:
              number: 80
  - host: www.ailzye.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ailyze-react-service
            port:
              number: 80
